[project]
name = "starlette-test"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "starlette>=0.37.2",
    "uvicorn>=0.29.0",
    "logfire[starlette] @ file:///home/user/code/starlette-test/../logfire/dist/logfire-0.35.0-py2.py3-none-any.whl",
    "pipdeptree>=2.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/starlette_test"]
